# neural_net_cc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
base/: CMakeLists.txt
base/basic_head/: CMakeLists.txt
base/basic_head/test/: test_lib.cpp
base/grpc_server/: CMakeLists.txt
base/grpc_service/: CMakeLists.txt
base/grpc_service/service/: test_lib.cpp
base/grpc_service/test/: test_lib.cpp
cc_base/: CMakeLists.txt
cc_base/automatic_diff/: CMakeLists.txt  ad_node.cpp  ad_node.h
cc_base/automatic_differentiation/: CMakeLists.txt  ad_node.cpp  ad_node.h
cc_base/base_template/: CMakeLists.txt  lib.cpp  lib.h
cc_base/base_template/test/: test_lib.cpp
cc_base/basic_head/: CMakeLists.txt  basic_head.cpp
cc_base/basic_head/test/: test_basic_heap.cpp  test_lib.cpp
cc_base/grpc_server/: lib.h
cc_base/grpc_server/test/: test_lib.cpp
cc_base/grpc_service/: CMakeLists.txt  lib.cpp  lib.h
cc_base/grpc_service/test/: test_lib.cpp
cc_base/server/: CMakeLists.txt  lib.h  readme.md
cc_base/server/test/: test_lib.cpp
cc_base/test1/: CMakeLists.txt  lib.h
cc_base/test1/test/: test_lib.cpp
cc_base/test2/: CMakeLists.txt  lib.cpp  lib.h
cc_base/test2/test/: test_lib.cpp
cc_base/test3/: CMakeLists.txt
cc_base/test3/test/: test_lib.cpp
modules/: CMakeLists.txt
modules/base_template/: lib.cpp  lib.h
modules/base_template/test/: test_lib.cpp
modules/basic_head/: lib.cpp  lib.h
modules/basic_head/test/: test_lib.cpp
modules/grpc_server/protos/: proto_file.proto
modules/server/: CMakeLists.txt  lib.cpp  lib.h
modules/server/test/: test_lib.cpp
src/: CMakeLists.txt  readme.md
src/template/: lib.cpp  lib.h  readme.md
src/template/test/: test_lib.cpp
src/zmy_template/: lib.cpp  lib.h
src/zmy_template/test/: test_lib.cpp
src_template/template/: CMakeLists.txt  lib.cpp  lib.h
src_template/template/test/: test_lib.cpp
